# cmake_git_version

./: CMakeLists.txt  Dockerfile  README.md  main.cpp  version.cpp.in  version.hpp
